For menu item sorting, changed to store collation keys instead of creating them for each comparison, bug 64146, r=ftang, sr=erik.